--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "axios": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.39.1",
     "react-redux": "^8.0.4",
     "react-router-app": "^0.1.6",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "redax": "^0.0.0",
     "redux": "^4.2.0",
-    "redux-form": "^8.3.8",
     "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
