--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "redax": "^0.0.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
+    "reselect": "^4.1.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
