--- a/package.json
+++ b/package.json
@@ -33,6 +33,11 @@
       "react-app/jest"
     ]
   },
+  "jest": {
+    "transformIgnorePatterns": [
+      "node_modules/(?!(react-leaflet|@react-leaflet|d3-*|axios))"
+    ]
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -43,6 +48,7 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ]
+    ]    
   }
+  
 }
